--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ The project homepage is L<https://github.com/SineSwiper/NetAddr-BridgeId/wiki>.
 
 The latest version of this module is available from the Comprehensive Perl
 Archive Network (CPAN). Visit L<http://www.perl.com/CPAN/> to find a CPAN
-site near you, or see L<https://metacpan.org/module/NetAddr::BridgeId/>.
+site near you, or see L<https://metacpan.org/module/NetAddr::BridgeID/>.
 
 =for :stopwords cpan testmatrix url annocpan anno bugtracker rt cpants kwalitee diff irc mailto metadata placeholders metacpan
 
