--- a/INSTALL
+++ b/INSTALL
@@ -1,24 +1,24 @@
 
-This is the Perl distribution NetAddr-BridgeId.
+This is the Perl distribution NetAddr-BridgeID.
 
-Installing NetAddr-BridgeId is straightforward.
+Installing NetAddr-BridgeID is straightforward.
 
 ## Installation with cpanm
 
 If you have cpanm, you only need one line:
 
-    % cpanm NetAddr::BridgeId
+    % cpanm NetAddr::BridgeID
 
 If you are installing into a system-wide directory, you may need to pass the
 "-S" flag to cpanm, which uses sudo to install the module:
 
-    % cpanm -S NetAddr::BridgeId
+    % cpanm -S NetAddr::BridgeID
 
 ## Installing with the CPAN shell
 
 Alternatively, if your CPAN shell is set up, you should just be able to do:
 
-    % cpan NetAddr::BridgeId
+    % cpan NetAddr::BridgeID
 
 ## Manual installation
 
@@ -38,7 +38,7 @@ If you are installing into a system-wide directory, you may need to run:
 
 ## Documentation
 
-NetAddr-BridgeId documentation is available as POD.
+NetAddr-BridgeID documentation is available as POD.
 You can run perldoc from a shell to read the documentation:
 
-    % perldoc NetAddr::BridgeId
+    % perldoc NetAddr::BridgeID
