--- a/README.pod
+++ b/README.pod
@@ -1,8 +1,56 @@
+=pod
+
 =encoding utf-8
 
 =head1 NAME
 
 NetAddr::BridgeID - Object for BridgeIDs (priority/MAC combos)
+
+=head1 SYNOPSIS
+
+   use NetAddr::BridgeID;
+    
+   my $bid;
+   $bid = NetAddr::BridgeID->new( '2#00:11:22:aa:bb:cc' );
+   $bid = NetAddr::BridgeID->new( bridge_id => '60#0011.22AA.BBCC' );
+   
+   use NetAddr::MAC;
+   my $mac = NetAddr::MAC->new( mac => '0011.22AA.BBCC' );
+   
+   $bid = NetAddr::BridgeID->new( priority => '60', mac_obj => $mac );
+   $bid = NetAddr::BridgeID->new( priority => '60', mac => '0011.22AA.BBCC' );
+
+=head1 DESCRIPTION
+
+This object class simply creates a L<NetAddr::MAC>-like object, with a priority for
+STP Bridge IDs.
+
+=for Pod::Coverage BUILDARGS
+
+=head1 METHODS
+
+=head2 original
+
+The original bridge ID string, as it was passed to the constructor.  If it was passed
+in pieces (or if parts were left out), it will fill in the gaps to provide a full
+bridge ID
+
+=head2 bridge_id
+
+The bridge ID, with a Cisco-style MAC address (like C<0000.1111.2222>).
+
+=head2 priority
+
+The priority number.
+
+=head2 mac_obj
+
+The L<NetAddr::MAC> object tied to this one.
+
+=head2 NetAddr::MAC Methods
+
+All of the C<is_* / as_* / to_*> methods are "handled" to the main BridgeID object, so 
+you can access them directly.
 
 =head1 AVAILABILITY
 
